--- a/IES_78323/Lab3/lab3_3/pom.xml
+++ b/IES_78323/Lab3/lab3_3/pom.xml
@@ -51,6 +51,18 @@
                         <version>2.0.1.Final</version>
                         <type>jar</type>
                 </dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-beans</artifactId>
+                        <version>5.3.12</version>
+                        <type>jar</type>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-web</artifactId>
+                        <version>5.3.12</version>
+                        <type>jar</type>
+                </dependency>
         </dependencies>
 
         <build>
